# audiothek-downloader

./: .coverage  .gitignore  Makefile  README.md  audiothek.py  pyproject.toml  readme.md  scrape.sh
.github/workflows/: check.yml
.windsurf/rules/: use-uv.md
graphql/: EpisodeQuery.graphql  ProgramSetEpisodesQuery.graphql  editorialCollection.graphql
src/audiothek/: __init__.py  __main__.py  cache.py  client.py  downloader.py  exceptions.py  file_utils.py  models.py  parallel.py  utils.py
src/audiothek/graphql/: EditorialCategoryCollections.graphql  ProgramSetEpisodesQuery.graphql  ProgramSetsByEditorialCategoryId.graphql  editorialCollection.graphql  schema.graphql
tests/: conftest.py  test_audiothek.py  test_cache.py  test_client.py  test_coverage.py  test_download.py  test_exceptions.py  test_file_utils.py  test_folders.py  test_main.py  test_metadata.py  test_metadata_consistency.py  test_parallel.py  test_parsing.py  test_proxy.py  test_utils.py
