[project]
name = "audiothek-downloader"
version = "0.2.0"
description = "Script that can download mp3s and covers from ARD audiothek"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
]


[dependency-groups]
dev = [
    "pytest-aiohttp>=1.1.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "graphql-core>=3.2.7",
    "ruff>=0.14.10",
    "tox>=4.32.0",
    "pytest-asyncio>=1.3.0",
    "radon>=6.0.1",
    "xenon>=0.9.3",
    "vulture>=2.14",
    "pyright>=1.1.407",
    "bandit>=1.9.2",
]

[tool.ruff]
exclude = ["docs", "tests"]
line-length = 160
indent-width = 4  # Same as autopep8 default

[tool.ruff.format]
quote-style = "double"  # Or "single" if you prefer
indent-style = "space"  # Use spaces instead of tabs
line-ending = "lf"  # Keep consistency
preview = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    "ANN",
    "UP",
    "UP042",
    "I"
]
select = ["E9", "F82", "D"]  # Syntax errors + docstrings
ignore = ["D203", "D213", "D100", "F821"]  # Ignore specific docstring rules

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=audiothek",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
exclude = ["**/__pycache__", "**/node_modules", "**/dist", "**/build", "**/venv", "**/.venv", "**/tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.vulture]
exclude = ["dist", "build", "venv", ".venv", "tests"]
ignore_decorators = ["@app.route", "@require_*"]
ignore_names = ["visit_*", "do_*"]
# make_whitelist = true
min_confidence = 80
paths = ["."]
sort_by_size = true
